--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
     align-items: center;
     padding: 120px 0;
     color: white;
-    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.8)), url("background.webp");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("background.webp");
     background-position: center;
     background-size: cover;
 }
@@ -29,9 +29,8 @@ header h1 {
     display: flex;
     justify-content: center;
     gap: 40px;
-    margin-bottom: 24px;
     padding: 30px 0;
-    background-color: rgb(255, 150, 150);
+    background-color: rgb(39, 34, 34);
 }
 
 .filter {
@@ -40,7 +39,7 @@ header h1 {
 }
 
 
-.filter label  {
+.filter label {
     margin-bottom: 4px;
     color: white;
 }
@@ -52,6 +51,41 @@ select {
     border: 1px solid #1f1f1f;
 }
 
+
+/* Sorting */
+.sorting-container {
+    background-color: #1f1f1f;
+    padding: 30px 0;
+}
+
+.sorting-container p {
+    text-align: center;
+    color: white;
+}
+
+.sorting-btn-container {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.sorting-button {
+    border: 1px solid white;
+    padding: 12px 16px;
+    font-size: 16px;
+    color: white;
+    border-radius: 16px;
+    background-color: #1f1f1f;
+}
+
+.sorting-button:hover {
+    cursor: pointer;
+}
+
+
+/* Results */
 .results {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -69,9 +103,9 @@ select {
     flex-direction: column;
     border-radius: 8px;
     background-color: white;
-    box-shadow: 2px 3px 5px 2px rgba(0,0,0,0.25);
-    -webkit-box-shadow: 2px 3px 5px 2px rgba(0,0,0,0.25);
-    -moz-box-shadow: 2px 3px 5px 2px rgba(0,0,0,0.25);
+    box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 2px 3px 5px 2px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease;
 }
 
@@ -125,7 +159,8 @@ select {
 
 /* Swiper */
 .swiper {
-    width: 100%;;
+    width: 100%;
+    ;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     height: 250px;
@@ -133,7 +168,7 @@ select {
 
 .swiper-pagination {
     padding: 4px;
-    background: rgba(0,0,0,0.4);
+    background: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(10px);
     border-radius: 16px;
 }
@@ -142,4 +177,134 @@ select {
     background: antiquewhite;
     width: 16px;
     height: 16px;
+}
+
+
+/* modal styling */
+dialog {
+    z-index: 10;
+    position: fixed;
+    width: 40%;
+    height: 60vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 16px;
+    border: none;
+    position: relative;
+    padding-bottom: 42px;
+}
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+}
+
+body.modal-open {
+    overflow: hidden; /* Prevent scrolling while modal is open */
+}
+
+#close-modal {
+    position: fixed;
+    top: 16px;
+    right: 16px;
+    border: none;
+    background-color: #33924a;
+    border-radius: 50%;
+    padding: 8px 12px;
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+}
+
+.modal-contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-contents img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.modal-contents h2 {
+    margin-top: 30px;
+    margin-bottom: 8px;
+}
+
+.modal-contents h4 {
+    color: #33924a;
+    font-size: 24px;
+    margin-top: 16px;
+}
+
+.modal-ammenities {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 30px;
+    margin-top: 16px;
+}
+
+.property-description {
+    font-weight: 300;
+    margin-top: 16px;
+    padding: 0px 60px;
+    line-height: 150%;
+}
+
+.booking-button {
+    padding: 12px 16px;
+    margin-top: 30px;
+    background-color: #33924a;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    font-size: 16px;
+}
+
+
+/* Media Queries!!! */
+@media only screen and (max-width: 1200px) {
+    header h1 {
+        font-size: 4em;
+        text-align: center;
+    }
+
+    .filter-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    select {
+        width: 600px;
+    }
+
+    .results {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    dialog {
+        width: 80%;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .results {
+        grid-template-columns: 1fr;
+    }
+
+    select {
+        max-width: 300px;
+    }
+    dialog {
+        height: 80vh;
+    }
+    .property-description {
+        padding: 0 32px;
+    }
 }
